@@ -1,3 +1,8 @@
+2000-08-09  Mark Kettenis  <kettenis@gnu.org>
+
+	* pf.c (S_socket_create): Only accept S_IFCHR, S_IFSOCK and
+	S_IFIFO as `magic' protocols.
+
 2000-08-02  Mark Kettenis  <kettenis@gnu.org>
 
 	Add `magic' protocols to specify the file type of a sockets.  This
